# jdk-switcher-gui

./: .gitignore  .pnp.cjs  README.md  index.html  package.json  tailwind.config.js
.github/workflows/: release.yml  rust.yml
src/: App.tsx  JdkDirSelectorDialog.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_settings.rs  app_view_model.rs  env_path_updater.rs  errors.rs  jdk_finder.rs  jdk_switcher.rs  main.rs  view_model.rs
src-tauri/src/model/: jdk.rs  mod.rs  settings.rs
src-tauri/src/repo/: jdk_repository.rs  mod.rs
src-tauri/src/util/: app_paths.rs  cargo_manifest.rs  command_exe_path_finder.rs  env.rs  mod.rs
src/component/: CircularLoader.tsx
src/hook/: applyAppTheme.ts  useTauriEvents.ts
src/model/: AppUiState.ts  Jdk.ts
