[package]
name = "jdk-switcher"
version = "1.0.0"
description = "A slim GUI App to switch between multiple JDKs."
authors = ["dokar"]
license = "Apache-2.0"
repository = "https://github.com/dokar3/jdk-switcher-gui"
edition = "2021"

[[bin]]
name = "jdk-switcher"
path = "src/main.rs"

[[bin]]
name = "env-path-updater"
path = "src/env_path_updater.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.8", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.14", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-dialog = "2.0.0-alpha.2"
indoc = "2"
async-channel = "1.9.0"
platform-dirs = "0.3.0"
tokio = { version = "1.32.0", features = ["rt"] }
open = "5.0.0"
winreg = "0.51.0"
dark-light = "1.0.0"
toml = { version = "0.8.1", features = ["parse"] }
runas = "1.1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# From https://github.com/johnthagen/min-sized-rust
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
